clusters/hetzner/apps/storage/minio/app/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-console
  namespace: istio-system
spec:
  gateways:
    - cluster-gateway
  hosts:
    - s3-console.behn.dev
    - s3-console.hetzner.k8s.behn.dev
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: minio.storage.svc.cluster.local
        port:
          number: 9001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio
  namespace: istio-system
spec:
  gateways:
    - cluster-gateway
  hosts:
    - s3.behn.dev
    - s3.hetzner.k8s.behn.dev
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: minio.storage.svc.cluster.local
        port:
          number: 9000
