clusters/hetzner/apps/storage/minio/app/storage-ingress.yaml
---
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: minio
  namespace: istio-system
spec:
  servers:
    - port:
        number: 443
        protocol: HTTPS
        name: https
      hosts:
        - s3.behn.dev
        - s3.hetzner.k8s.behn.dev
      tls:
        mode: SIMPLE
        credentialName: behndev-global
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
        - s3.behn.dev
        - s3.hetzner.k8s.behn.dev
      tls:
        httpsRedirect: true
  selector:
    istio: ingress
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio
  namespace: istio-system
spec:
  gateways:
    - minio-console
  hosts:
    - s3.behn.dev
    - s3.hetzner.k8s.behn.dev
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: minio.storage.svc.cluster.local
        port:
          number: 9000
